--- a/style/style.css
+++ b/style/style.css
@@ -16,20 +16,20 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
-    --webkit-backdrop-filter: blur(16px) brightness(60%);
-    backdrop-filter: blur(16px) brightness(60%);
-    color: #eee;
+    background-color: #eee;
+    color: #222;
     font-family: Overused-Grotesk;
     font-size: 1.1em;
     min-height: 100dvh;
     display: flex;
     flex-direction: column;
     margin: 0;
+    font-weight: 450;
 }
 
 a {
     transition: 0.2s;
-    color: #eee;
+    color: #222;
 }
 
 a:hover {
@@ -48,14 +48,15 @@ main {
 
 /* NAVIGATION */
 nav {
-    border-bottom: 1px solid #eee;
-    background-color: rgba(34, 34, 34, 0.6);
+    border-bottom: 1px solid #222;
+    background-color: rgba(220, 220, 220, 0.6);
     --webkit-backdrop-filter: blur(25px);
     backdrop-filter: blur(25px);
     overflow: hidden; /* used to make sure that the background of the whole navbar stays visible */
     display: flex;
     position: sticky;
     top: 0px;
+    z-index: 1000;
     align-items: center;
     justify-content: space-around;
     transition: all 0.3s ease;
@@ -77,8 +78,9 @@ nav .mainLogo a {
 }
 
 nav a {
-    color: #eee;
+    color: #222;
     font-size: 1.05em;
+    font-weight: 500;
     text-decoration: none;
     padding: 15px;
     display: block;
@@ -126,7 +128,7 @@ nav.nav-scrolled a {
 #heroBtnLinks a {
     margin: 3px 8px;
     font-size: 2em;
-    background-color: #eee;
+    background-color: rgba(216, 216, 216, 0.6);
     color: #222;
     border-radius: 50%;
     padding: 0.7em 0.8em;
@@ -141,7 +143,7 @@ nav.nav-scrolled a {
 
 /* SITE SECTIONS */
 .siteSection {
-    border-bottom: 1px solid #eee;
+    border-bottom: 1px solid #222;
     padding: 2em 4em;
     font-size: 1.2em;
 }
@@ -169,7 +171,7 @@ nav.nav-scrolled a {
     text-align: center;
     align-content: center;
     margin: 10px;
-    background-color: rgba(34, 34, 34, 0.6);
+    background-color: rgba(216, 216, 216, 0.6);
     padding: 1.2em;
     border-radius: 25px;
     /* width: 25vw; */
@@ -181,7 +183,7 @@ nav.nav-scrolled a {
 /* PROJECTS */
 .projectBox {
     width: 100%;
-    background-color: rgba(34, 34, 34, 0.6);
+    background-color: rgba(216, 216, 216, 0.6);
     border-radius: 25px;
     padding: 1.10em;
     margin-bottom: 1.1em;
@@ -204,7 +206,7 @@ nav.nav-scrolled a {
     font-size: 0.8em;
     border-radius: 15px;
     padding: 0.4em;
-    background-color: #eee;
+    background-color: #bbb;
     color: #222;
 }
 
@@ -238,7 +240,7 @@ nav.nav-scrolled a {
 }
 
 .skillBoxesContainer .skillBox {
-    background-color: rgba(34, 34, 34, 0.6);
+    background-color: rgba(216, 216, 216, 0.6);
     border-radius: 20px;
     padding: 1.1em;
     width: 25vw;
